--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+	  <title>Suzuki Dealer Jatim - Promo Mobil Suzuki</title>
+<meta name="description" content="suzuki hybrid,harga mobil suzuki,suzuki surabaya,suzuki xl7,suzuki vitara,mobil suzuki terbaru,mobil suzuki,suzuki carry,harga suzuki xl7,suzuki mobil,dealer"/>
+<meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
+<link rel="canonical" href="https://www.suzukidealerjatim.net/" />
+<meta property="og:locale" content="id_ID" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Promo Suzuki Terbaru - Surabaya - Suzuki Indomobil Surabaya" />
+<meta property="og:description" content="suzuki hybrid,harga mobil suzuki,suzuki surabaya,suzuki xl7,suzuki vitara,mobil suzuki terbaru,mobil suzuki,suzuki carry,harga suzuki xl7,suzuki mobil,dealer" />
+<meta property="og:url" content="https://www.suzukidealerjatim.net/" />
+<meta property="og:site_name" content="Suzuki Dealer Jatim" />
+<meta property="og:site_name" content="Suzuki Indomobil Surabaya">
+<meta property="og:locale" content="id_ID">
+<meta property="og:type" content="website">
+<meta name="google-site-verification" content="p3qJtZWIDyR1q3TxRa1jnDuEHBVx4r9ucRe_jkc8nqE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -436,3 +451,4 @@ Proses Cepat & Pasti Acc</h4>
     <script src="main.js"></script>
   </body>
 </html>
+
